<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lazer Tag</string>
    <string name="new_game_button">new game</string>
    <string name="join_game_button">join game</string>
    <string name="join_button">Continue</string>
    <string name="game_id_prompt">Enter the game ID</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_join">JoinActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_wait">WaitActivity</string>
    <string name="game_id_label">Game Code</string>
    <string name="you_label">You</string>
    <string name="others_label">Other Players</string>
    <string name="start_button">Start Game</string>
    <string name="player_name_prompt">Your name</string>
    <string name="title_activity_daint">Da Int</string>
    <string name="title_activity_picker">ColorPickerActivity</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_game_over">GameOverActivity</string>

</resources>
