<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LaunchActivity" >

	<TextView
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="@android:style/TextAppearance.Large"
        android:gravity="center"
        android:text="@string/app_name" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_game_button"
        android:background="#C08277"
        android:onClick="newGame" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/join_game_button"
        android:background="#7EC47D"
        android:onClick="joinGame" />

</LinearLayout>
