<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WaitActivity" >

    <View
    	android:id="@+id/player_color"
    	android:layout_width="25dp"
        android:layout_height="50dp"
    	android:background="@drawable/rectangle"/>


    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/TextAppearance.Large"
        android:text="@string/game_id_label" />
        
    <TextView
        android:id="@+id/game_id_field"
        android:layout_width="wrap_content"
        style="@android:style/TextAppearance.Medium"
        android:layout_height="wrap_content" />
        
    <TextView
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/TextAppearance.Large"
        android:text="@string/you_label" />
        
    <ListView
    	android:id="@+id/you_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
            android:paddingTop="@dimen/activity_horizontal_margin"
    	android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/TextAppearance.Large"
        android:text="@string/others_label" />
        
    <ListView
    	android:id="@+id/others_list"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="wrap_content" />
        
    <Button
		android:id="@+id/start_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        android:background="#7EC47D"
        android:onClick="startGame" />


</LinearLayout>
